data/derived/sp14/progs/unify/prog1760.ml.out
Characters 64-69:
  addPHelper n_pos;;
             ^^^^^
Error: This expression has type int list
       but an expression was expected of type int
